Phase 3.2 - Implement Endpoint Payload Validation

--- a/system/system_manifest.json
+++ b/system/system_manifest.json
@@ -69,7 +69,8 @@
         "subphases": {
           "phase_3.1": {
             "name": "Endpoint Health Verification",
-            "status": "in_progress",
+            "status": "completed",
+            "completed_date": "2025-04-27",
             "started_date": "2025-04-27",
             "components": [
               "Endpoint Validator",
@@ -77,7 +78,19 @@
               "Drift History Integration",
               "System Manifest Expansion"
             ],
-            "notes": "Implementing endpoint health verification to validate API execution surfaces. No automatic repairs are performed."
+            "notes": "Implemented endpoint health verification to validate API execution surfaces. No automatic repairs are performed."
+          },
+          "phase_3.2": {
+            "name": "Endpoint Payload Validation",
+            "status": "in_progress",
+            "started_date": "2025-04-27",
+            "components": [
+              "Payload Validator",
+              "Payload Drift Report",
+              "Drift History Integration",
+              "System Manifest Expansion"
+            ],
+            "notes": "Implementing endpoint payload validation to verify API response payloads. No automatic repairs are performed."
           }
         },
         "status": "in_progress"
@@ -86,10 +99,13 @@
     "recent_surface_health_scores": [10.1],
     "last_baseline_drift_reference": "baseline_surface_drift_v1.0_20250427",
     "last_validation_timestamp": "2025-04-27T19:18:00",
-    "last_endpoint_validation_timestamp": null,
-    "last_endpoint_health_score": null,
-    "last_endpoint_drift_report_path": null,
-    "last_updated": "2025-04-27T19:47:00",
-    "last_updated_by": "Endpoint Health Verification System"
+    "last_endpoint_validation_timestamp": "2025-04-27T19:47:00",
+    "last_endpoint_health_score": 0.0,
+    "last_endpoint_drift_report_path": "/logs/endpoint_drift_report_20250427.json",
+    "last_payload_validation_timestamp": null,
+    "last_payload_health_score": null,
+    "last_payload_drift_report_path": null,
+    "last_updated": "2025-04-27T20:06:00",
+    "last_updated_by": "Endpoint Payload Validation System"
   }
 }
